compiler/typ/tests/fixtures/diagnostics/0882_gadt_constructor_payload_bool_mismatch_03.ml
type _ expr_gamma =
  | EInt_gamma : int -> int expr_gamma
  | EBool_gamma : bool -> bool expr_gamma

let _ : bool expr_gamma = EBool_gamma 2
